# rust-crash-course-1

./: Cargo.toml  rust-crash-course.code-workspace
topics/array/exercises/src/: lib.rs
topics/array/solutions/: Cargo.toml
topics/array/solutions/tests/: test.rs
topics/async_await/solutions/: Cargo.toml
topics/borrowing_rules/exercises/src/: main.rs
topics/borrowing_rules/solutions/: Cargo.toml
topics/enum_type/solutions/: Cargo.toml
topics/enum_type/solutions/tests/: test.rs
topics/error/exercises/src/: lib.rs
topics/error/solutions/: Cargo.toml
topics/error/solutions/tests/: test.rs
topics/for_loop/exercises/src/: lib.rs
topics/for_loop/solutions/: Cargo.toml
topics/for_loop/solutions/tests/: test.rs
topics/function/solutions/: Cargo.toml
topics/function/solutions/tests/: test.rs
topics/generic_trait/solutions/: Cargo.toml
topics/generic_trait/solutions/tests/: test.rs
topics/generic_type/solutions/: Cargo.toml
topics/generic_type/solutions/tests/: test.rs
topics/hash_map/exercises/src/: lib.rs
topics/hash_map/solutions/: Cargo.toml
topics/hash_map/solutions/tests/: test.rs
topics/hello/solutions/: Cargo.toml
topics/if_else/solutions/: Cargo.toml
topics/if_else/solutions/tests/: test.rs
topics/if_let/exercises/src/: lib.rs
topics/if_let/solutions/: Cargo.toml
topics/if_let/solutions/tests/: test.rs
topics/iterator_adaptors/solutions/: Cargo.toml
topics/iterator_adaptors/solutions/tests/: test.rs
topics/join_select/solutions/: Cargo.toml
topics/lifetime/solutions/: Cargo.toml
topics/method/solutions/: Cargo.toml
topics/method/solutions/tests/: test.rs
topics/modules/exercises/src/: util.rs
topics/modules/solutions/: Cargo.toml
topics/modules/solutions/examples/: mods.rs
topics/modules/solutions/src/: main.rs
topics/ownership/exercises/src/: lib.rs
topics/ownership/solutions/: Cargo.toml
topics/ownership/solutions/examples/: ownership.rs
topics/pattern_match/solutions/: Cargo.toml
topics/question/solutions/: Cargo.toml
topics/scalar/solutions/: Cargo.toml
topics/string/solutions/: Cargo.toml
topics/struct_type/solutions/: Cargo.toml
topics/trait_basic/solutions/: Cargo.toml
topics/trait_bound/solutions/: Cargo.toml
topics/tuple/solutions/: Cargo.toml
topics/unwrap/solutions/: Cargo.toml
topics/variable/solutions/: Cargo.toml
topics/vector/solutions/: Cargo.toml
(+17 files in other folders)
