[workspace]
resolver = "2"
members = [
    # Exercise packages
    "topics/array/exercises",
    "topics/async_await/exercises", 
    "topics/borrowing_rules/exercises",
    "topics/enum_type/exercises",
    "topics/error/exercises",
    "topics/for_loop/exercises",
    "topics/function/exercises",
    "topics/generic_trait/exercises",
    "topics/generic_type/exercises",
    "topics/hash_map/exercises",
    "topics/hello/exercises",
    "topics/if_else/exercises",
    "topics/if_let/exercises",
    "topics/iterator_adaptors/exercises",
    "topics/join_select/exercises",
    "topics/lifetime/exercises",
    "topics/method/exercises",
    "topics/modules/exercises",
    "topics/ownership/exercises",
    "topics/pattern_match/exercises",
    "topics/question/exercises",
    "topics/scalar/exercises",
    "topics/stack_heap",
    "topics/string/exercises",
    "topics/struct_type/exercises",
    "topics/trait_basic/exercises",
    "topics/trait_bound/exercises",
    "topics/tuple/exercises",
    "topics/unwrap/exercises",
    "topics/variable/exercises",
    "topics/vector/exercises",
    
    # Solution packages (renamed with -solution suffix)
    "topics/array/solutions",
    "topics/async_await/solutions",
    "topics/borrowing_rules/solutions",
    "topics/enum_type/solutions",
    "topics/error/solutions",
    "topics/for_loop/solutions",
    "topics/function/solutions",
    "topics/generic_trait/solutions",
    "topics/generic_type/solutions",
    "topics/hash_map/solutions",
    "topics/hello/solutions",
    "topics/if_else/solutions",
    "topics/if_let/solutions",
    "topics/iterator_adaptors/solutions",
    "topics/join_select/solutions",
    "topics/lifetime/solutions",
    "topics/method/solutions",
    "topics/modules/solutions",
    "topics/ownership/solutions",
    "topics/pattern_match/solutions",
    "topics/question/solutions",
    "topics/scalar/solutions",
    "topics/string/solutions",
    "topics/struct_type/solutions",
    "topics/trait_basic/solutions",
    "topics/trait_bound/solutions",
    "topics/tuple/solutions",
    "topics/unwrap/solutions",
    "topics/variable/solutions",
    "topics/vector/solutions",
]

[workspace.dependencies]
# Shared dependencies across the workspace
tokio = { version = "1.44", features = ["full"] }
